# cs702-ci

./: .gitignore  README.md  environment.yml  install_dependencies.sh  install_prism.sh  pixi.toml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
04_bayesian_inference/lecture/: beta.ipynb  ppl.ipynb
05_validating_user_model/: external_validation.ipynb  validation.ipynb
05_validation/: external_validation.ipynb
06_bandit/lecture/: 01_bandit.ipynb  bandit.ipynb  contextual_bandit.ipynb
07_discrete_optimization/lecture/: scheduling.ipynb
07_mdp/lecture/: mdp.ipynb
08_discrete_optimization/lecture/: reinforcement_learning.ipynb
09_discrete_event_systems/lecture/: activity_agent.pm  engagement.pm  engagement_timed.pm  forward_simulation.py  run_engagement.sh  run_prism.sh
09_reinforcement_learning/lecture/: bql.py
10_conv_verification/lecture/: activity_agent.pm  activity_agent_invariance.pctl  activity_agent_reachability.pctl  activity_agent_reward.pctl  ctl.ipynb  engagement_invariance.pctl  engagement_reachability.pctl  engagement_verification.pctl  ltl.ipynb  run_prism.sh
11_dynamical_system/lecture/: delay.ipynb  ivp.ipynb  ivp_demo.py  pid.ipynb  pid_tracking_demo.py
12_state_space_representation/lecture/: lg-ssm.ipynb  lti.ipynb  scroll.py
13_numerical_optimization/: gradient_descent.ipynb  mhe.ipynb  quadratic_programming.ipynb
14_optimization_control/lecture/: cbf.ipynb  mpc.ipynb  mpc_casadi.ipynb  mpc_pyomo.ipynb  opt_control.ipynb  opt_control_casadi.ipynb  opt_control_pyomo.ipynb
15_cont_verification/lecture/: animation.ipynb  rtamt.ipynb  stl_jax.ipynb  stl_opt.ipynb
16_bayesian_filter/lecture/: ekf.ipynb
bandit/exercise/: 03_parameter_estimation.ipynb
bandit/lecture/: 02_contextual_bandit.ipynb
bf/lecture/: kalman.ipynb
conv_verification/lecture/: ctl.ipynb
discrete_optimization/lecture/: scheduling.ipynb
gaussian_process/lecture/: 02_gp_ppl.ipynb
gp/lecture/: 01_gp.ipynb
numerical_optimization/: gradient_descent.ipynb
week-04/exercise/: 01_softmax.ipynb
week-04/lecture/: 01_bandit.ipynb
week-05/exercise/: 01_mvn.ipynb  02_gp_regression.ipynb  03_bo.ipynb
week-06/lecture/: bir.py  mbrl.ipynb
week-07/exercise/: force.ipynb  synthetic_force_data.csv
week-07/lecture/: conceptual_validation.ipynb  model_validation.ipynb  system_validation.ipynb
week-09/lecture/: ivp.ipynb  pid_demo.py
week-10/lecture/: lg-ssm.ipynb  lgssm.ipynb  lti.ipynb
week-11/exercise/: opt.ipynb
week-11/lecture/: cbf.ipynb
week-12/lecture/: kalman.ipynb
