[project]
name = "cs702"
version = "0.1.0"
description = "CS702 project"
requires-python = ">=3.12"
dependencies = [
    "arviz==0.20.0",
    "jupyter==1.1.1", 
    "matplotlib==3.10.0",
    "networkx==3.4.2", 
    "numpy==2.2.1",
    "numpyro==0.16.1",
    "optax==0.2.4",
    "pandas==2.2.3",
    "pymodelchecking==1.3.4",
    "pyomo==6.8.2",
    "rtamt==0.3.5",
    "scipy==1.15.0",
    "seaborn==0.13.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "02_intelligent_user_interface*",
    "04_bayesian_inference*",
    "05_validating_user_model*",
    "07_discrete_optimization*",
    "08_bandit*",
    "09_reinforcement_learning*",
    "10_conv_verification*",
    "11_dynamical_system*",
    "12_state_space_representation*",
    "13_numerical_optimization*",
    "14_optimization_control*",
    "15_bayesian_filter*",
]