[project]
name = "cs702"
version = "0.1.0"
description = "CS702 project"
requires-python = ">=3.12"
dependencies = [
    "arviz==0.20.0",
    "casadi==3.7.2",
    "jaxopt==0.8.5",
    "jupyter==1.1.1",
    "matplotlib==3.10.0",
    "networkx==3.4.2",
    "numpy==2.4.0",
    "numpyro==0.19.0",
    "optax==0.2.4",
    "pandas==2.2.3",
    "pyomo==6.8.2",
    "rtamt==0.3.5",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "stormpy==1.11.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "02_intelligent_user_interface*",
    "04_bayesian_inference*",
    "05_validating_user_model*",
    "07_discrete_optimization*",
    "08_bandit*",
    "09_reinforcement_learning*",
    "10_conv_verification*",
    "11_dynamical_system*",
    "12_state_space_representation*",
    "13_numerical_optimization*",
    "14_optimization_control*",
    "15_bayesian_filter*",
]